small style fix

--- a/form-element-mixin.html
+++ b/form-element-mixin.html
@@ -68,7 +68,7 @@
 
       connectedCallback() {
         super.connectedCallback();
-        this._ensureAttribute('tabindex', 0);
+        this._ensureAttribute('tabindex', true);
       }
 
       _computeInvalid(required, value) {
