--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -172,12 +172,11 @@
         background: var(--input-selection-background);
       }
       ::-moz-focus-inner {
-        border-style: none;
+        border: 0;
         padding: 0;
       }
       ::-moz-focusring {
-        border-width: 0
-        color: transparent;
+        color: transparent !important;
         text-shadow: 0 0 0 var(--input-focus-color, #000);
       }
       [hidden] {
