--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -29,6 +29,7 @@
           transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1);
         };
         --input-focus: {
+          outline: none;
           color: var(--input-focus-color);
           background: var(--input-focus-background);
         };
