--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -46,8 +46,8 @@
 
       static get template() {
         return `
-          ${this._styleTemplate}
-          ${this.hasNative ? this._native : this._polyfill}
+          ${this.styleTemplate}
+          ${this.hasNative ? this.nativeTemplate : this.polyfillTemplate}
         `
       }
 
@@ -55,7 +55,7 @@
        * custom style template
        * @type {string}
        */
-      static get _styleTemplate() {
+      static get styleTemplate() {
         return `
           <style include="${this.customStyleToInclude || ''}">
             ${this.customStyleContent}
@@ -102,11 +102,7 @@
             --input-background: transparent;
           }
           #picker {
-            display: -webkit-inline-flex;
-            display: -ms-inline-flexbox;
-            display: inline-flex;
-            flex-direction: column;
-            flex-shrink: 0;
+            display: inline-block;
             color: var(--input-color);
             background: var(--input-background);
             @apply --input-picker;
@@ -126,9 +122,10 @@
           #picker > * {
             padding: var(--input-picker-padding, 4px);
             box-shadow: none !important;
-          }
-          #picker[horizontal] {
-            flex-direction: row;
+            box-sizing: border-box;
+            float: left;
+            clear: both;
+            width: 100%;
           }
           #picker > :first-child {
             border-top-left-radius: inherit;
@@ -143,20 +140,9 @@
             border-bottom-right-radius: 0 !important;
           }
           #picker > :last-child {
+            padding-top: 0;
             border-bottom-left-radius: inherit;
             border-bottom-right-radius: inherit;
-          }
-          #picker[horizontal] > :not(:first-child) {
-            border-bottom-left-radius: 0 !important;
-          }
-          #picker[horizontal] > :first-child {
-            border-bottom-left-radius: inherit !important;
-          }
-          #picker[horizontal] > :not(:last-child) {
-            border-top-right-radius: 0 !important;
-          }
-          #picker[horizontal] > :last-child {
-            border-top-right-radius: inherit !important;
           }
         `;
       }
@@ -165,11 +151,11 @@
        * template for native input is supported including the polyfill
        * @type {string}
        */
-      static get _native() {
+      static get nativeTemplate() {
         return `
-          ${this._nativeInputTemplate}
+          ${this.nativeInputTemplate}
           <div hidden$="[[native]]" style="position:relative;">
-            ${this._polyfill}
+            ${this.polyfillTemplate}
           </div>
         `
       }
@@ -178,10 +164,10 @@
        * template for polyfilled input and picker
        * @type {string}
        */
-      static get _polyfill() {
+      static get polyfillTemplate() {
         return `
           <div id="polyfill" on-click="open">
-            ${this.replacementInputTemplate}
+            ${this.polyfillInputTemplate}
           </div>
           ${this.pickerTemplate}
         `;
@@ -191,11 +177,11 @@
        * template for control buttons
        * @type {string}
        */
-      static get _buttonTemplate() {
+      static get buttonTemplate() {
         return `
-          ${super._buttonTemplate || ''}
-          <button class="icon confirm" on-mousedown="confirm" on-mouseup="close" tabindex="0"><svg viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg></button>
-          <button class="icon cancel" on-click="cancel" hidden$="[[autoConfirm]]" tabindex="0"><svg viewBox="0 0 24 24"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg></button>
+          ${super.buttonTemplate || ''}
+          <button class="icon confirm" on-mousedown="confirm" on-tap="close" tabindex="0"><svg viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg></button>
+          <button class="icon cancel" on-tap="cancel" hidden$="[[autoConfirm]]" tabindex="0"><svg viewBox="0 0 24 24"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg></button>
         `;
       }
 
@@ -203,7 +189,7 @@
        * template for native input element
        * @type {string}
        */
-      static get _nativeInputTemplate() {
+      static get nativeInputTemplate() {
         return `
           <input class="native" type="${this.expectedNativeInputType}" hidden$="[[!native]]" disabled$="[[disabled]]" readonly="[[disabled]]" required="[[required]]" value="{{${this.nativeInputBinding || this.expectedNativeInputType}::input}}">
         `;
@@ -213,7 +199,7 @@
        * template for the replacement of the native input elements
        * @type {string}
        */
-      static get replacementInputTemplate() {
+      static get polyfillInputTemplate() {
         return '';
       }
 
@@ -225,7 +211,7 @@
         return `
           <div id="picker" class="dropdown">
             <div id="buttons">
-              ${this._buttonTemplate}
+              ${this.buttonTemplate}
             <div>
           </div>`;
       }
@@ -261,21 +247,22 @@
 
           /**
            * The orientation against which to align the element horizontally
-           * relative to the related input element. Possible values are "left", "right", "auto". (comparable to `iron-fit-behavior` and its `no-overlap`-attribute)
+           * relative to the related input element. Possible values are "left", "right", "center", "auto". (comparable to `iron-fit-behavior` and its `no-overlap`-attribute)
            */
           horizontalAlign: {
             type: String,
             reflectToAttribute: true,
             value: 'auto'
           },
+
           /**
            * The orientation against which to align the element vertically
-           * relative to the related input element. Possible values are "top", "bottom", "auto". (comparable to `iron-fit-behavior` and its `no-overlap`-attribute)
+           * relative to the related input element. Possible values are "top", "bottom", "middle", "auto". (comparable to `iron-fit-behavior` and its `no-overlap`-attribute)
            */
           verticalAlign: {
             type: String,
             reflectToAttribute: true,
-            value: 'top'
+            value: 'auto'
           },
 
           /**
@@ -328,6 +315,7 @@
         if (!this.opened) {
           // enshure display style for the picker, for ignoring the tabindex of the picker elements
           this.$.picker.style.visibility = 'hidden';
+          this.$.picker.style.display = 'hidden';
         }
         this.$.picker.addEventListener('transitionend', this._onPickerTransitionEnd.bind(this), false);
       }
@@ -339,6 +327,7 @@
       _onPickerTransitionEnd() {
         if (!this.opened) {
           this.$.picker.style.visibility = 'hidden';
+          this.$.picker.style.display = 'hidden';
         }
       }
 
@@ -398,7 +387,6 @@
         if (e.keyCode === 13 || e.keyCode === 32) { // space || enter
           if (this.opened) {
             this.confirm();
-            this.close();
           } else {
             this.open();
           }
@@ -413,6 +401,7 @@
        * open the picker
        */
       open() {
+        this.$.picker.style.display = '';
         this.$.picker.style.visibility = '';
         if (super.open) {
           super.open();
@@ -465,6 +454,7 @@
         if (super.confirm) {
           super.confirm();
         }
+        this.close();
       }
 
       /**
