--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -7,7 +7,6 @@
         font-family: inherit;
         font-size: inherit;
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0); -webkit-tap-highlight-color: transparent;
-        outline-width: 0;
         -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
         position: relative;
         box-sizing: content-box;
@@ -21,12 +20,15 @@
         --input-invalid-color: #e83953;
         --input-selection-color: var(--input-focus-color);
         --input-selection-background: rgba(255,255,255,0.1);
+        --input-placeholder: {
+          opacity: 0.75;
+        };
         /* initial mixins */
         --input-style: {
           padding: 0.2em;
           border-radius: 4px;
           text-align: center;
-          transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1);
+          transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), color 50ms linear;
         };
         --input-focus: {
           outline: none;
@@ -51,12 +53,17 @@
           height: 16px;
           width: 16px;
           background: transparent;
-          transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1);
+          transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), border-color 250ms cubic-bezier(0.6, 1, 0.2, 1);
         };
         --input-invalid: {
           border-color: var(--input-invalid-color);
         };
       }
+
+      :host(:focus) {
+        outline: none;
+      }
+
       select,
       input {
         display: inline-flex;
@@ -98,7 +105,7 @@
         color: var(--input-color);
         background: var(--input-background);
       }
-      input:invalid {
+      :host([required]) input:invalid {
         border-width: thin;
         border-style: solid;
         @apply --input-invalid;
@@ -125,16 +132,24 @@
       }
       .icon {
         @apply --input-icon;
+        border: thin solid transparent;
       }
       .icon > svg {
         height: 100%;
         width: 100%;
         fill: currentColor;
       }
-      .icon:focus,
+      :host(:hover) .icon.switch:focus,
+      .icon:not(.switch):focus,
+      .icon:active,
+      .icon[active],
       .icon:hover {
-        outline: none;
+        border-color: var(--input-focus-background);
         @apply --input-focus;
+      }
+      .icon:focus {
+        border-color: var(--input-focus-background);
+        outline: none;
       }
       select:focus::-ms-value {
         background: transparent;
@@ -149,8 +164,10 @@
       ::-webkit-search-cancel-button,
       ::-webkit-clear-button {
         color: currentColor;
-        align-self: center;
         cursor: pointer;
+      }
+      ::-webkit-input-placeholder {
+        @apply --input-placeholder;
       }
       ::-webkit-search-cancel-button,
       ::-webkit-clear-button {
