--- a/switch-container-mixin.html
+++ b/switch-container-mixin.html
@@ -1,6 +1,6 @@
 <script>
   /**
-   * Mixin to extend an element for binding switch button to increment properties. Button-switches should be of class `switch` and have the attributes `prop` and `step` that define the property to increment in the given step. 
+   * Mixin to extend an element for binding switch button to increment properties. Button-switches should be of class `switch` and have the attributes `prop` and `step` that define the property to increment in the given step.
    *
    * @mixinFunction
    * @polymer
@@ -104,8 +104,10 @@
         this._stopActiveIncremJob();
         let prop = s.getAttribute && s.getAttribute('prop');
         const step = (s.getAttribute && s.getAttribute('step')) || 1;
+        s.setAttribute('active', '');
         this._incremProp(prop, +step);
         this._activeIncremJob = setInterval(this._incremProp.bind(this, prop, +step), this.dwellTime);
+        this._activeSwitch = s;
       }
 
       _incremProp(prop, step) {
@@ -116,6 +118,8 @@
         if (this._activeIncremJob) {
           clearInterval(this._activeIncremJob);
           this._activeIncremJob = null;
+          this._activeSwitch.removeAttribute('active');
+          this._activeSwitch = null;
         }
       }
 
