--- a/overlay-picker-mixin.html
+++ b/overlay-picker-mixin.html
@@ -49,7 +49,8 @@
            * and if there's not enough space, it will pick the values which minimize the cropping.
            */
           dynamicAlign: {
-            type: Boolean
+            type: Boolean,
+            reflectToAttribute: true
           },
 
           /**
@@ -122,7 +123,7 @@
 
       connectedCallback() {
         super.connectedCallback();
-        this.positionTarget = this.$.polyfill;
+        this.positionTarget = this;
         this._set_sizingTarget(this.$.overlay);
         this.fit();
       }
