--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -11,11 +11,11 @@
         position: relative;
         box-sizing: content-box;
         --dropdown-tip-size: 6px;
-        --input-color: #dadada;
-        --input-background: #2b2b2b;
+        --input-color: #d5d5d5;
+        --input-background: #252525;
         --input-disabled-background: transparent;
         --input-disabled-color: #888;
-        --input-focus-color: #f5f5f5;
+        --input-focus-color: #f1f1f1;
         --input-focus-background: var(--primary-color, #394FE8);
         --input-invalid-color: #e83953;
         --input-selection-color: var(--input-focus-color);
@@ -45,7 +45,7 @@
           box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
                       0 1px 8px 0 rgba(0, 0, 0, 0.12),
                       0 3px 3px -2px rgba(0, 0, 0, 0.4);
-          border-radius: 6px;
+          border-radius: 8px;
         };
         --input-icon: {
           border-radius: 4px;
