option to keep picker open when other pickers are opened, correct event removal

--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -290,25 +290,47 @@
           },
 
           /**
-           * Set to true to disable the tip of the picker
-           */
-          noTip: {
-            type: Boolean,
-            reflectToAttribute: true
-          },
-
-          /**
            * Set to true to disable canceling the dropdown by clicking outside the picker.
            */
           noCancelOnOutsideClick: {
             type: Boolean,
             value: false
+          },
+
+          /**
+           * Set to true to keep multiple pickers open. (will only work as expected when e.g. `noCancelOnOutsideClick` is set to true)
+           */
+          keepMultiplePickersOpen: {
+            type: Boolean,
+            value: false
+          },
+
+          /**
+           * Set to true to disable the tip of the picker
+           */
+          noTip: {
+            type: Boolean,
+            reflectToAttribute: true
           }
+
+          /**
+          * @event input-picker-opened
+          * Fired when a picker has been opened.
+          */
+
+          /**
+          * @event input-picker-closed
+          * Fired after a picker has been closed.
+          */
         }
       }
 
       connectedCallback() {
         super.connectedCallback();
+        this._onPickerTransitionEnd = this._onPickerTransitionEnd.bind(this);
+        this._checkKeycode = this._checkKeycode.bind(this);
+        this._stopPropagation = this._stopPropagation.bind(this);
+        this.cancel = this.cancel.bind(this);
         this._addPickerTransitionEndListener();
         this._addKeyListener();
       }
@@ -325,11 +347,11 @@
           this.$.picker.style.visibility = 'hidden';
           this.$.picker.style.display = 'hidden';
         }
-        this.$.picker.addEventListener('transitionend', this._onPickerTransitionEnd.bind(this), false);
+        this.$.picker.addEventListener('transitionend', this._onPickerTransitionEnd, false);
       }
 
       _removePickerTransitionEndListener() {
-        this.$.picker.removeEventListener('transitionend', this._onPickerTransitionEnd.bind(this), false);
+        this.$.picker.removeEventListener('transitionend', this._onPickerTransitionEnd, false);
       }
 
       _onPickerTransitionEnd() {
@@ -341,13 +363,25 @@
 
       _addCancelOnClickListener() {
         // prevent when clicking on the picker that it is closes
-        this.addEventListener('click', this._stopPropagation, false);
-        document.addEventListener('click', this.cancel.bind(this), false);
+        if (!this.noCancelOnOutsideClick) {
+          document.addEventListener('click', this.cancel, false);
+          this.addEventListener('click', this._stopPropagation, false);
+        }
       }
 
       _removeCancelOnClickListener() {
+        document.removeEventListener('click', this.cancel, false);
         this.removeEventListener('click', this._stopPropagation, false);
-        document.removeEventListener('click', this.cancel.bind(this), false);
+      }
+
+      _addKeepPickersOpenListener() {
+        if (!this.keepMultiplePickersOpen) {
+          document.addEventListener('input-picker-opened', this.cancel, false);
+        }
+      }
+
+      _removeKeepPickersOpenListener() {
+        document.removeEventListener('input-picker-opened', this.cancel, false);
       }
 
       _stopPropagation(e) {
@@ -356,12 +390,12 @@
 
       _addKeyListener() {
         super._addKeyListener && super._addKeyListener();
-        this.addEventListener('keydown', this._checkKeycode.bind(this), false);
+        this.addEventListener('keydown', this._checkKeycode, false);
       }
 
       _removeKeyListener() {
         super._removeKeyListener && super._removeKeyListener();
-        this.removeEventListener('keydown', this._checkKeycode.bind(this), false);
+        this.removeEventListener('keydown', this._checkKeycode, false);
       }
 
       _nativeOnMobileChanged(nativeOnMobile) {
@@ -408,16 +442,23 @@
       /**
        * open the picker
        */
-      open() {
+      open(e) {
+        if (e && e.stopPropagation) {
+          e.stopPropagation();
+        }
         this.$.picker.style.display = '';
         this.$.picker.style.visibility = '';
         if (super.open) {
           super.open();
         }
-        this.opened = true;
-        if (!this.noCancelOnOutsideClick) {
-          this._addCancelOnClickListener();
+        if (!this.opened) {
+          this.dispatchEvent(new (CustomEvent || Event)('input-picker-opened', { bubbles: true, detail: this }));
+          setTimeout(() => {
+            this._addCancelOnClickListener();
+            this._addKeepPickersOpenListener();
+          })
         }
+        this.opened = true;
       }
 
       /**
@@ -429,11 +470,13 @@
           e.stopPropagation();
         }
         this._removeCancelOnClickListener();
+        this._removeKeepPickersOpenListener();
         if (super.close) {
           super.close();
         }
         setTimeout( () => {
           this.opened = false;
+          this.dispatchEvent(new (CustomEvent || Event)('input-picker-closed', { bubbles: true, detail: this }));
         })
       }
 
