--- a/switch-container-mixin.html
+++ b/switch-container-mixin.html
@@ -45,6 +45,12 @@
 
       connectedCallback() {
         super.connectedCallback();
+
+        // Eventhandler binding to this to be able to remove the Eventlisteners properly
+        this._increm = this._increm.bind(this);
+        this._stopActiveIncremJob = this._stopActiveIncremJob.bind(this);
+        this._checkKeycodeSwitch = this._checkKeycodeSwitch.bind(this);
+        
         this._addSwitchListener();
       }
 
