--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -132,6 +132,7 @@
       }
       .icon {
         @apply --input-icon;
+        flex-shrink: 0;
         border: thin solid transparent;
       }
       .icon > svg {
