--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -102,7 +102,8 @@
             --input-background: transparent;
           }
           #picker {
-            display: inline-block;
+            display: inline-flex;
+            flex-flow: column nowrap;
             color: var(--input-color);
             background: var(--input-background);
             @apply --input-picker;
@@ -112,15 +113,13 @@
             padding: var(--input-picker-padding, 4px);
             box-shadow: none !important;
             box-sizing: border-box;
-            float: left;
           }
           #picker #buttons {
             display: inline-flex;
             position: relative;
-            float: right;
+            align-self: stretch;
             align-items: flex-end;
             justify-content: flex-end;
-            box-sizing: content-box;
             color: var(--input-color);
             background: var(--input-background);
           }
