--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -10,11 +10,11 @@
         -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
         position: relative;
         box-sizing: content-box;
-        --dropdown-tip-size: 6px;
+        --dropdown-tip-size: 0.3em;
         --input-color: #d5d5d5;
         --input-background: #252525;
         --input-disabled-background: transparent;
-        --input-disabled-color: #888;
+        --input-disabled-color: currentColor;
         --input-focus-color: #f1f1f1;
         --input-focus-background: var(--primary-color, #394FE8);
         --input-invalid-color: #e83953;
@@ -25,8 +25,8 @@
         };
         /* initial mixins */
         --input-style: {
-          padding: 0.2em;
-          border-radius: 4px;
+          padding: 0.25em;
+          border-radius: 0.25em;
           text-align: center;
           transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), color 50ms linear;
         };
@@ -45,13 +45,13 @@
           box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
                       0 1px 8px 0 rgba(0, 0, 0, 0.12),
                       0 3px 3px -2px rgba(0, 0, 0, 0.4);
-          border-radius: 8px;
+          border-radius: 0.5em;
         };
         --input-icon: {
-          border-radius: 4px;
-          padding: 8px;
-          height: 16px;
-          width: 16px;
+          border-radius: 0.25em;
+          padding: 0.5em;
+          height: 1em;
+          width: 1em;
           background: transparent;
           transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), border-color 250ms cubic-bezier(0.6, 1, 0.2, 1);
         };
@@ -68,7 +68,7 @@
       input {
         display: inline-flex;
         align-items: center;
-        line-height: 1;
+        line-height: normal;
         outline: none;
         font-family: inherit;
         font-size: inherit;
@@ -126,6 +126,9 @@
         border-width: 0;
         padding: 0;
         box-sizing: content-box;
+      }
+      button:focus {
+        outline: none;
       }
       button > * {
         pointer-events: none;
