--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -8,17 +8,6 @@
    *
    * @appliesMixin FormElementMixin
    *
-   * Custom property | Description | Default
-   * ----------------|-------------|----------
-   * `--input-color` | text-color of the element | `#dadada`
-   * `--input-background` | text-color of the element | `#2b2b2b`
-   * `--input-focus-color` | color of the focussed or hovered inputs and icons | `#f5f5f5`
-   * `--input-focus-background` | background of the focussed or hovered inputs and icons | `--primary-color, #394FE8`
-   * `--input-style` | Mixin applied to the inputs | { border-radius: 3px; padding: 0.2em 0.1em; border: none; outline: none; text-align: center; color: inherit; cursor: pointer; background: transparent; box-sizing: content-box; transition: background 150ms cubic-bezier(0.6, 1, 0.2, 1);`
-   * `--input-focus` | Mixin applied to the focussed or hovered inputs | {}`
-   * `--input-icon` | Mixin applied to the icons | `{border-radius: 2px; padding: 8px; height: 16px; width: 16px; background: transparent; transition: background 150ms cubic-bezier(0.6, 1, 0.2, 1); cursor: pointer; fill: currentColor; }`
-   * `--input-picker` | Mixin applied to the element | `{box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 3px -2px rgba(0, 0, 0, 0.4); border-radius: 4px;}`
-   *
    * @mixinFunction
    * @polymer
    */
@@ -104,6 +93,9 @@
             display: inline-flex;
             flex-flow: column nowrap;
             padding: 0;
+          }
+          #picker[horizontal] {
+            flex-flow: row nowrap;
           }
           #picker > * {
             padding: var(--input-picker-padding, 0.25em);
@@ -220,7 +212,7 @@
       static get properties() {
         return {
           /**
-           * use the native input, if it exists
+           * Set to `true` to use the native input, if it available
            */
           native: {
             type: Boolean,
@@ -228,16 +220,24 @@
           },
 
           /**
-           * use the native input automatically on mobile devices
+           * Set to `true` to use the native input automatically on mobile devices, if it available
            */
           nativeOnMobile: {
             type: Boolean,
-            value: false,
             observer: '_nativeOnMobileChanged'
           },
 
           /**
-           * opens the picker
+           * When `nativeOnMobile` is set to `true` this string is used to test the userAgent for a mobile device
+           */
+          mobileUserAgentTestString: {
+            type: Boolean,
+            value: 'mM]obi|[tT]ablet|[aA]ndroid',
+            observer: '_nativeOnMobileChanged'
+          },
+
+          /**
+           * if `true` the picker is opened
            */
           opened: {
             type: Boolean,
@@ -267,7 +267,7 @@
           },
 
           /**
-           * Set to true to make the input auto-confirming
+           * Set to `true` to make the input auto-confirming
            */
           autoConfirm: {
             type: Boolean,
@@ -275,7 +275,7 @@
           },
 
           /**
-           * Set to true to disable canceling the overlay with the ESC key.
+           * Set to `true` to disable canceling the overlay with the ESC key.
            */
           noCancelOnEscKey: {
             type: Boolean,
@@ -283,7 +283,7 @@
           },
 
           /**
-           * Set to true to disable canceling the dropdown by clicking outside the picker.
+           * Set to `true` to disable canceling the dropdown by clicking outside the picker.
            */
           noCancelOnOutsideClick: {
             type: Boolean,
@@ -291,7 +291,7 @@
           },
 
           /**
-           * Set to true to keep multiple pickers open. (will only work as expected when e.g. `noCancelOnOutsideClick` is set to true)
+           * Set to `true` to keep multiple pickers open. (will only work as expected when e.g. `noCancelOnOutsideClick` is set to true)
            */
           keepMultiplePickersOpen: {
             type: Boolean,
@@ -299,7 +299,7 @@
           },
 
           /**
-           * Set to true to disable the tip of the picker
+           * Set to `true` to disable the tip of the picker
            */
           noTip: {
             type: Boolean,
@@ -391,17 +391,17 @@
         this.removeEventListener('keydown', this._checkKeycode, false);
       }
 
-      _nativeOnMobileChanged(nativeOnMobile) {
-        if (nativeOnMobile === undefined) {
+      _nativeOnMobileChanged() {
+        if (this.nativeOnMobile === undefined) {
           return;
         }
 
         const ua = window.navigator.userAgent,
-          isMobile = /[mM]obi/i.test(ua) || /[tT]ablet/i.test(ua) || /[aA]ndroid/i.test(ua);
+          isMobile = new RegExp(this.mobileUserAgentTestString, 'i').test(ua);
         if (isMobile === true) {
-          if (nativeOnMobile === true) {
+          if (this.nativeOnMobile === true) {
             this.native = true;
-          } else if (!this.native && nativeOnMobile === false) {
+          } else if (!this.native && this.nativeOnMobile === false) {
             this.native = false;
           }
         }
