--- a/dropdown-tip-style.html
+++ b/dropdown-tip-style.html
@@ -13,7 +13,7 @@ styles for used for a tip of the dropdown
         position: absolute;
         width: 0;
         height: 0;
-        border-width: var(--dropdown-tip-size, 0px);
+        border-width: var(--dropdown-tip-size, 0);
         border-style: solid;
         border-color: transparent transparent transparent transparent;
         left: auto;
@@ -33,14 +33,14 @@ styles for used for a tip of the dropdown
       :host([horizontal-align]) .dropdown:after,
       :host([horizontal-align="auto"]) .dropdown:after,
       :host([horizontal-align="left"]) .dropdown:after {
-        top: calc(-2 * var(--dropdown-tip-size, 0px));
-        left: calc(2 * var(--dropdown-tip-size, 0px));
+        top: calc(-2 * var(--dropdown-tip-size, 0));
+        left: calc(2 * var(--dropdown-tip-size, 0));
         border-bottom-color: var(--input-background, #000);
       }
 
       :host([horizontal-align="right"][vertical-align]) .dropdown:after {
         left: auto;
-        right: calc(2 * var(--dropdown-tip-size, 0px));
+        right: calc(2 * var(--dropdown-tip-size, 0));
       }
 
       :host([horizontal-align="center"][vertical-align]) .dropdown:after {
@@ -50,7 +50,7 @@ styles for used for a tip of the dropdown
 
       :host([horizontal-align][vertical-align="bottom"]) .dropdown:after {
         top: auto;
-        bottom: calc(-2 * var(--dropdown-tip-size, 0px));
+        bottom: calc(-2 * var(--dropdown-tip-size, 0));
         border-bottom-color: transparent;
         border-top-color: var(--input-background, #000);
       }
@@ -58,7 +58,7 @@ styles for used for a tip of the dropdown
       :host([horizontal-align][vertical-align="middle"]) .dropdown:after {
         top: auto; right: auto;
         bottom: 50%;
-        left: calc(-2 * var(--dropdown-tip-size, 0px));
+        left: calc(-2 * var(--dropdown-tip-size, 0));
         border-top-color: transparent;
         border-bottom-color: transparent;
         border-right-color: var(--input-background, #000);
@@ -67,7 +67,7 @@ styles for used for a tip of the dropdown
 
       :host([horizontal-align="left"][vertical-align="middle"]) .dropdown:after {
         left: auto;
-        right: calc(-2 * var(--dropdown-tip-size, 0px));
+        right: calc(-2 * var(--dropdown-tip-size, 0));
         border-right-color: transparent;
         border-left-color: var(--input-background, #000);
       }
